<resources>

    <string name="text1">original_title</string>
    <string name="text2">popularity</string>
    <string name="text3">vote_average</string>
    <string name="text4">Add to Cart</string>
    <string name="text5">0</string>
    <string name="text6">-</string>
    <string name="text7">+</string>
    <string name="text8">Remove all items</string>
    <string name="text9">Shopping Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
